# xiaowang

./: README.md
xiaowang_start/: xiaowang_start_dataflow.yml
xiaowang_start/data/info/: team.md
xiaowang_start/data/output/: agent_response.json
xiaowang_start/scripts/: agent_DLC.py
xiaowang_terminal/: pyproject.toml
xiaowang_terminal/xiaowang/: main.py
