[tool.poetry]
name = "terminal-input"
version = "0.3.6"
authors = [
    "Yuqiao Hu <15201090624@163.com>"
]
description = "Dora terminal input"
license = "MIT License"
homepage = "https://github.com/dora-rs/dora.git"
documentation = "https://github.com/dora-rs/dora/blob/main/node-hub/terminal-input/README.md"
readme = "README.md"
packages = [{ include = "xiaowang" }]

[tool.poetry.dependencies]
#dora-rs = "^0.3.6"
numpy = "< 2.0.0"
pyarrow = ">= 5.0.0"

[tool.poetry.scripts]
xiaowang = "xiaowang.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
readme = "README.md"
